Very basic implementation of song search using the echonest api

--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
@@ -19,6 +19,12 @@
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header id="header" class="container">
     <h1>%%WELCOME_TEXT%%</h1>
+    <form id="search_song" action="#" method="post">
+        <fieldset>
+        <input id="search_keywords" name="keywords" type="text" placeholder="Artist - Song">
+        <input name="submig" type="submit" value="Search">
+        </fieldset>
+    </form>
   </header>
   <div id="main" class="container">
     <h2 class="visuallyhidden">Controls:</h2>
