--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
@@ -11,7 +11,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <link rel="stylesheet" href="style.css">
-
+  <script src="jquery.js"></script>
   <script src="modernizr.min.js"></script>
   <script src="dragdrop.js"></script>
 </head>
