Added the popover list for showing the tracks returned from the echonest API

--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
@@ -50,7 +50,18 @@
   <footer id="footer" class="container">
     <a class="get_reign" href="http://reignalot.com" target="_blank">Get Reign for Spotify</a>
   </footer>
-
+  <div id="searchlist">
+  <!-- The searchlist should contain a close button -->
+    <div class="title">
+        Song Search
+        <input type="button" id="closesearchbutton" class="closebutton" value="close" />
+    </div>
+    <div class="listbox">
+      <div class="" id="songlist">
+      </div>
+    </div>
+  <!-- And the list of matching tracks -->
+  </div>
   <script src="script.js"></script>
 
   <script>
