Fixed list display

--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
@@ -55,6 +55,7 @@
     <div class="title">
         Song Search
         <input type="button" id="closesearchbutton" class="closebutton" value="close" />
+        <div style="clear:both;"></div>
     </div>
     <div class="listbox">
       <div class="" id="songlist">
