Fixed cursor on PC and li display as well as close button colour

--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
@@ -54,7 +54,7 @@
   <!-- The searchlist should contain a close button -->
     <div class="title">
         Song Search
-        <input type="button" id="closesearchbutton" class="closebutton" value="close" />
+        <div id="closesearchbutton" class="closebutton" >close</div>
         <div style="clear:both;"></div>
     </div>
     <div class="listbox">
