Finetune search, release 1.0.3

--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
@@ -53,7 +53,7 @@
   <div id="searchlist">
   <!-- The searchlist should contain a close button -->
     <div class="title">
-        Song Search
+        Song Search (by Echonest)
         <div id="closesearchbutton" class="closebutton" >close</div>
         <div style="clear:both;"></div>
     </div>
