Fixed shuffling status and added ability to shuffle. Currently using the play pause button to show shuffling. Need to update this to its own button

--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
@@ -32,6 +32,7 @@
       <ol class="clearfix">
         <li><a id="previous" href="/previous">Previous</a></li>
         <li><a id="playpause" href="/playpause">Play/Pause</a></li>
+        <li><a id="shuffle" href="/shuffle">Shuffle</a></li>
         <li><a id="next" href="/next">Next</a></li>
       </ol>
     </nav>
