--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/index.html
@@ -14,6 +14,8 @@
   <script src="jquery.js"></script>
   <script src="modernizr.min.js"></script>
   <script src="dragdrop.js"></script>
+  <script src="jquery-ui-1.10.0.custom.min.js"></script>
+  <link rel="stylesheet" href="css/ui-darkness/jquery-ui-1.10.0.custom.min.css"/>
 </head>
 <body>
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -35,6 +37,12 @@
         <li><a id="shuffle" href="/shuffle">Shuffle</a></li>
         <li><a id="next" href="/next">Next</a></li>
       </ol>
+      <div id="playtime">
+          <div id="currtime">0.00</div>
+          <div id="playtime_slider"></div>
+          <div id="totaltime">0.00</div>
+          <div style="clear:both;"></div>
+      </div>
     </nav>
     <h2 class="visuallyhidden">Playlist</h2>
     <ul id="playlist">
